<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_light_tertiary"
              android:layout_gravity="center_horizontal|center_vertical"
              android:gravity="center_vertical|center_horizontal"
              android:orientation="vertical"
              android:layout_centerInParent="true"
              tools:context="com.quadmagnus.pharma.SignupActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_institute_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_institute_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_institute_name"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_institute_name"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile_no"
                    android:maxLength="10"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_mobile"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_address"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pin_code"
                    android:maxLength="6"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            android:id="@+id/next_second_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:clickable="false"
            android:text="@string/next"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"/>
    </RelativeLayout>
</LinearLayout>
