<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
              android:orientation="vertical"
              android:background="@color/grey_light_tertiary"
              android:layout_gravity="center_horizontal|center_vertical"
              android:gravity="center_vertical|center_horizontal"
              tools:context="com.quadmagnus.pharma.SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/icn_user_placeholder"/>
            <com.pkmmte.view.CircularImageView
                android:layout_width="80dp"
                android:id="@+id/profile_image1"
                android:layout_height="80dp"
                android:src="@drawable/icn_user_placeholder"
                app:border="true"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:border_color="#EEEEEE"
                app:border_width="4dp"
                app:shadow="true" />

            <ImageView
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="50dp"
                android:paddingLeft="50dp"
                android:src="@drawable/icn_add"
                tools:ignore="RtlSymmetry"/>

        </FrameLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="25dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_firstname"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_fname"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastname"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text=""/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_lname"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text=""/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text=""/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_password"
                android:imeOptions="actionNext"
                app:counterOverflowTextAppearance="@style/counterOverride"
                app:counterTextAppearance="@style/counterText"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:text=""/>
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>
        </ScrollView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            android:id="@+id/next_first_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:clickable="false"
            android:text="@string/next"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"/>
    </RelativeLayout>
</LinearLayout>
